--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-<<<<<<< HEAD
   "homepage": "https://AbdullahMazharIqbal1.github.io/ProposalAI",
-=======
-  "homepage":"https://AbdullahMazharIqbal1.github.io/ProposalAI",
->>>>>>> 1579eceb435a35dc9c604371a7de342afd46e0d5
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-<<<<<<< HEAD
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-=======
-    
->>>>>>> 1579eceb435a35dc9c604371a7de342afd46e0d5
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -70,6 +60,7 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "rm": "^0.1.8",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
